video 10/28 completed on 10/02/2023

--- a/Frontend/src/app/components/partials/header/header.component.html
+++ b/Frontend/src/app/components/partials/header/header.component.html
@@ -13,7 +13,7 @@
             <a>Logout</a>
           </div>
         </li>
-        <li><a routerLink="/Cart">Cart <span>3</span> </a></li>
+        <li><a routerLink="/cart-page">Cart <span *ngIf="cartQuantity"> {{cartQuantity }}    </span> </a></li>
       </ul>
     </nav>
   </div>
